ploticus: simplify: set the version in the version field
git-svn-id: https://svn.macports.org/repository/macports/trunk@71782 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/ploticus/Portfile
+++ b/dports/math/ploticus/Portfile
@@ -3,9 +3,7 @@
 PortSystem 1.0
 
 name             ploticus
-set major_version 2
-set minor_version 40
-version          ${major_version}.${minor_version}
+version          2.40
 revision         3
 categories       math
 maintainers      nomaintainer
@@ -22,7 +20,7 @@ homepage         http://ploticus.sourceforge.net/
 platforms        darwin
 
 master_sites     sourceforge:${name}
-distname         pl${major_version}${minor_version}src
+distname         pl[join [split ${version} .] {}]src
 checksums        md5 560bf4ede9d7a132261ba36574434962 \
                  sha1 824860a41a46ad15cc8c6cb37fa6f59176f4e01e \
                  rmd160 4e36b4cff635042213a4693a44fb03298782edfc
