ploticus: simplify master_sites
git-svn-id: https://svn.macports.org/repository/macports/trunk@71783 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/ploticus/Portfile
+++ b/dports/math/ploticus/Portfile
@@ -19,7 +19,7 @@ long_description \
 homepage         http://ploticus.sourceforge.net/
 platforms        darwin
 
-master_sites     sourceforge:${name}
+master_sites     sourceforge
 distname         pl[join [split ${version} .] {}]src
 checksums        md5 560bf4ede9d7a132261ba36574434962 \
                  sha1 824860a41a46ad15cc8c6cb37fa6f59176f4e01e \
