ploticus: update to 2.41, support universal and non-default-build_arch builds, add license info
git-svn-id: https://svn.macports.org/repository/macports/trunk@71785 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/ploticus/Portfile
+++ b/dports/math/ploticus/Portfile
@@ -3,10 +3,11 @@
 PortSystem 1.0
 
 name             ploticus
-version          2.40
-revision         3
+version          2.41
 categories       math
 maintainers      nomaintainer
+license          GPL
+
 description      plot generation program
 long_description \
 	A free, GPL, non-interactive software package for producing plots, \
@@ -21,23 +22,31 @@ platforms        darwin
 
 master_sites     sourceforge
 distname         pl[join [split ${version} .] {}]src
-checksums        md5 560bf4ede9d7a132261ba36574434962 \
-                 sha1 824860a41a46ad15cc8c6cb37fa6f59176f4e01e \
-                 rmd160 4e36b4cff635042213a4693a44fb03298782edfc
+
+checksums        md5     ed68bd653488bbe86301077e12d3265a \
+                 sha1    f12aa6d5d2d0d284f69b589263f0ee39ed8e0317 \
+                 rmd160  25dfca2d40d7da44235292587aaf7e3b47cac12c
 
 depends_lib      port:xorg-libX11 port:libpng port:zlib \
                  port:gd2 port:jpeg port:freetype
 
 patchfiles       patch-src-Makefile.diff
 
-post-patch {
-	reinplace s|__PREFIX__|${prefix}| ${worksrcpath}/src/Makefile
-}
-
 use_configure    no
+
+variant universal {}
+if {[variant_isset universal]} {
+    set archflags ${configure.universal_cflags}
+} else {
+    set archflags ${configure.cc_archflags}
+}
 
 build.dir        ${worksrcpath}/src
 build.target
+build.args       PREFIX=${prefix} \
+                 CC="${configure.cc} ${archflags}"
+
+destroot.args    PREFIX=${prefix}
 
 post-destroot {
     xinstall -m 444 ${worksrcpath}/man/man1/pl.1 ${destroot}${prefix}/share/man/man1/ploticus.1
