libpixman-devel: update to 0.19.4
git-svn-id: https://svn.macports.org/repository/macports/trunk@71788 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/libpixman-devel/Portfile
+++ b/dports/graphics/libpixman-devel/Portfile
@@ -7,7 +7,7 @@ PortGroup               muniversal 1.0
 name                    libpixman-devel
 conflicts               libpixman
 set my_name             pixman
-version                 0.19.2
+version                 0.19.4
 categories              graphics
 platforms               darwin
 maintainers             ryandesign
@@ -25,9 +25,11 @@ long_description        libpixman is a generic library for manipulating pixel \
                         regions. A PixRegion is a set of Y-X banded rectangles \
                         that cover the desired region.
 
-checksums               md5     4ed74b6aa9139541718c0d61a581fd50 \
-                        sha1    c3d69deca35a1fd4f3ca9d7ca4344d805f56e205 \
-                        rmd160  8af2e57b5c52ceb5dd097e9f9e043771857c5454
+checksums               md5     dfbfbd46221246edd3be702ea65084aa \
+                        sha1    11418e935c373340850c5467275feb40eba83e38 \
+                        rmd160  bb7d5e951b850785a4830781ac214f5a3cc8f722
+
+patchfiles              patch-test-utils.c.diff
 
 configure.args          --disable-gtk
 
