--- a/dports/python/py26-bzr-git/Portfile
+++ b/dports/python/py26-bzr-git/Portfile
@@ -15,6 +15,10 @@ homepage          https://launchpad.net/bzr-git
 master_sites      ${homepage}/trunk/${version}/+download
 distname          bzr-git-${version}
 
+checksums         md5     228cb92fa0d9d64c082e0b91b807c192 \
+                  sha1    dcac5ec9732071b9884a3e99e60d9a2f9e8e837e \
+                  rmd160  c970beeb872a570a7bb52c3f31ec2f05deb12251
+
 depends_lib-append  port:py26-dulwich
 
 livecheck.type    regex
