--- a/dports/aqua/pgAdmin3/Portfile
+++ b/dports/aqua/pgAdmin3/Portfile
@@ -5,7 +5,7 @@ PortSystem 1.0
 PortGroup               archcheck 1.0
 
 name		pgAdmin3
-version		1.10.5
+version		1.12.0
 
 categories	aqua
 maintainers	jwa
@@ -24,20 +24,20 @@ master_sites	http://developer.pgadmin.org/ftp/release/v${version}/src/ \
 
 distname	pgadmin3-${version}
 
-checksums           md5     00d71f2fd982879dfd80b9aa07b3bf7d \
-                    sha1    8bfff88a8535a0ee942abb46f1fc236df0b05b02 \
-                    rmd160  a7324a085d207ba35ea73c6068631c3d4b26aae9
+checksums           md5     ab004323c4f83f2d59bc538d7eca1fab \
+                    sha1    edceaa1556db4e894a9337309248cb7a32e83602 \
+                    rmd160  d14b4cf0b9ff409e6e054187e0f34b00c8a90806
 
-depends_lib	port:postgresql84 \
+depends_lib	port:postgresql90 \
     port:wxWidgets \
     port:openssl \
     port:libxml2 \
     port:libxslt
 
-archcheck.files lib/postgresql84/libpq.dylib \
+archcheck.files lib/postgresql90/libpq.dylib \
     lib/libwx_macu_gl-2.8.dylib
 
-configure.args	--with-pgsql=${prefix}/lib/postgresql84 \
+configure.args	--with-pgsql=${prefix}/lib/postgresql90 \
     --with-wx=${prefix} \
     --with-wx-version=2.8 \
     --with-libxml2=${prefix} \
@@ -60,18 +60,26 @@ destroot {
 
 variant with_postgresql82 conflicts with_postgresql83 \
     description {support for PostgreSQL 8.2.x} {
-	depends_lib-delete	port:postgresql84
-	depends_lib-delete	--with-pgsql=${prefix}/lib/postgresql84
+	depends_lib-delete	port:postgresql90
+	depends_lib-delete	--with-pgsql=${prefix}/lib/postgresql90
 	depends_lib-append	port:postgresql82
 	configure.args-append	--with-pgsql=${prefix}/lib/postgresql82
 }
 
 variant with_postgresql83 conflicts with_postgresql82 \
     description {support for PostgreSQL 8.3.x} {
-	depends_lib-delete	port:postgresql84
-	depends_lib-delete	--with-pgsql=${prefix}/lib/postgresql84
+	depends_lib-delete	port:postgresql90
+	depends_lib-delete	--with-pgsql=${prefix}/lib/postgresql90
 	depends_lib-append	port:postgresql83
 	configure.args-append	--with-pgsql=${prefix}/lib/postgresql83
+}
+
+variant with_postgresql84 conflicts with_postgresql82 \
+    description {support for PostgreSQL 8.4.x} {
+	depends_lib-delete	port:postgresql90
+	depends_lib-delete	--with-pgsql=${prefix}/lib/postgresql90
+	depends_lib-append	port:postgresql84
+	configure.args-append	--with-pgsql=${prefix}/lib/postgresql84
 }
 
 variant debug description {provide a debug build in case of difficulties} {
