--- a/dports/editors/abiword-x11/Portfile
+++ b/dports/editors/abiword-x11/Portfile
@@ -5,65 +5,33 @@ PortSystem 1.0
 
 name		abiword-x11
 set dname       abiword
-version		2.6.8
+version		2.8.6
 description	A word processor with gnome support.
 long_description        A word processor with gnome support.
 maintainers	nomaintainer
 categories	editors textproc gnome
 platforms	darwin
 homepage	http://www.abisource.com/
-master_sites    \
-	http://www.abisource.org/downloads/${dname}/${version}/source \
-	http://www.nl.abisource.com/downloads/${dname}/${version}/source
+master_sites    http://www.abisource.org/downloads/${dname}/${version}/source \
+	        http://www.nl.abisource.com/downloads/${dname}/${version}/source
 
-checksums       md5     fab04d8ef999c303f720197adf261310 \
-                sha1    fc979982edc3445385705afdb1e2ebb1fa53a4f6 \
-                rmd160  8fcf455a5226a5525b9a89f88c9916b20e973607
+checksums       md5     f883b0a7f26229a9c66fd6a1a94381aa \
+                sha1    998f69d038000b3fc027d4259548f02d67c8d0df \
+                rmd160  caabab25d197f9553ea12376de36fc7f5a771a58
 
 distname	${dname}-${version}
 
 patchfiles      patch-configure.diff
 
-depends_lib	\
-        port:gtk2 \
-        port:libglade2 \
-        port:libgsf \
-        port:libgnomeui \
-	port:libgnomeprintui \
-   	port:fribidi \
-	port:wv \
-	port:ImageMagick \
-        port:enchant
+depends_build   port:pkgconfig
 
-configure.args	\
-	--disable-Cocoa \
-	--disable-Carbon \
-	--x-includes=${prefix}/include \
-        --x-libraries=${prefix}/lib \
-        --mandir=${prefix}/share/man \
-	--with-expat=${prefix} \
-	--with-fribidi=${prefix} \
-	--with-ImageMagick=${prefix} \
-	--with-libiconv=${prefix} \
-	--with-libjpeg-prefix=${prefix} \
-	--with-libpng=${prefix} \
-	--with-popt=${prefix} \
-	--with-zlib=${prefix} \
-	--without-epath \
-	--enable-gnome
+depends_lib	port:libgnomeui \
+                port:libgsf \
+   	        port:fribidi \
+	        port:wv \
+                port:enchant
 
-variant without_gnome description {Disable GNOME support} {
-	configure.args-delete	--enable-gnome
-        depends_lib-delete	\
-		port:libgnomeui \
-                port:libgnomeprintui
-}
-
-platform darwin 9 {
-	post-patch {
-		reinplace "s|#define ICONV_CONST const|#define ICONV_CONST|g" ${worksrcpath}/src/af/util/xp/ut_iconv.cpp
-	}
-}
+configure.args	--disable-default-plugins
 
 livecheck.type  regex
 livecheck.url   http://www.abisource.com/downloads/${dname}/
