gnucash: increment revision to force rebuild against latest libgoffice (#26256), simplify dependencies.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71807 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnucash/Portfile
+++ b/dports/gnome/gnucash/Portfile
@@ -5,7 +5,7 @@ PortSystem        1.0
 
 name              gnucash
 version           2.2.9
-revision          5
+revision          6
 categories        gnome x11
 maintainers       nomaintainer
 platforms         darwin
@@ -30,23 +30,19 @@ checksums         md5     b83c188506f749929a69b48c0632d3b8 \
                   sha1    b7debe12fcb2770f5ec4524ec56c57adbdad19d2 \
                   rmd160  2e16625b59762a52cea09cfa8139138ee21c6fb2
 
-depends_lib       port:p5-xml-parser \
-                  path:lib/pkgconfig/glib-2.0.pc:glib2 \
-                  port:gconf \
-                  port:guile16 \
-                  port:slib \
+depends_build     port:pkgconfig \
+                  port:intltool \
+                  port:libtool
+
+depends_lib       port:gconf \
                   port:slib-guile16 \
-                  port:popt \
                   port:libgnomeui \
                   port:libgnomeprintui \
                   port:libgtkhtml3 \
-                  port:libgsf \
                   port:goffice \
                   port:aqbanking \
-                  port:libofx \
                   port:p5-finance-quote
 
-depends_build     port:libtool
 depends_run       port:evince
 
 # aqbanking and libgtkhtml3 are not universal
