--- a/dports/python/py26-serial/Portfile
+++ b/dports/python/py26-serial/Portfile
@@ -1,32 +1,36 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
 
-PortGroup		python26 1.0
-name			py26-serial
-version			2.4
-categories-append	comms
-platforms		darwin
-maintainers		macsforever2000
-description		Python Serial Port Extension
-long_description	This module incapsulates the access for the serial port. \
-				It provides backends for standard Python running on Windows, \
-				Linux, BSD (possibly any POSIX compliant system) and Jython. \
-				The module named "serial" automatically selects the appropriate \
-				backend.
-homepage		http://pyserial.wiki.sourceforge.net/pySerial
-master_sites		sourceforge:pyserial
-distname		pyserial-${version}
-checksums		md5 eec19df59fd75ba5a136992897f8e468 \
-			sha1 9536434736aa92da17fd05eed260efd3864ff9bd \
-			rmd160 c794cbc4bf006628e28a91c975bf897994dec095
+PortGroup           python26 1.0
+
+name                py26-serial
+version             2.5
+categories-append   comms
+platforms           darwin
+maintainers         macsforever2000
+license             Python
+
+description         Python Serial Port Extension
+long_description    This module incapsulates the access for the serial port. \
+                    The module named "serial" automatically selects the appropriate \
+                    backend.
+
+homepage            http://pyserial.wiki.sourceforge.net/pySerial
+master_sites        sourceforge:pyserial
+distname            pyserial-${version}
+
+checksums           md5     34340820710239bea2ceca7f43ef8cab \
+                    sha1    fd991f9cf9bb02dfb3bd2cb48b582c2216f90031 \
+                    rmd160  026c5937d5fba67a72445b5c193a337aa3776505
 
 post-destroot {
-	xinstall -m 644 -W ${worksrcpath} CHANGES.txt LICENSE.txt README.txt \
-		${destroot}${prefix}/share/doc/${name}
-	xinstall -m 644 -W ${worksrcpath}/examples enhancedserial.py miniterm.py \
-		scan.py tcp_serial_redirect.py test.py test_advanced.py \
-		wxSerialConfigDialog.py wxSerialConfigDialog.wxg \
-		wxTerminal.py wxTerminal.wxg \
-		${destroot}${prefix}/share/doc/${name}/examples
+    xinstall -m 644 -W ${worksrcpath} CHANGES.txt LICENSE.txt README.txt \
+        ${destroot}${prefix}/share/doc/${name}
+    xinstall -m 644 -W ${worksrcpath}/examples enhancedserial.py miniterm.py \
+        port_publisher.py port_publisher.sh rfc2217_server.py scan.py tcp_serial_redirect.py \
+        wxSerialConfigDialog.py wxSerialConfigDialog.wxg \
+        wxTerminal.py wxTerminal.wxg \
+        ${destroot}${prefix}/share/doc/${name}/examples
 }
