libgda4: update to version 4.1.11, add +with_postgresql90 variant.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71817 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/libgda4/Portfile
+++ b/dports/databases/libgda4/Portfile
@@ -6,7 +6,7 @@ PortSystem 1.0
 name		libgda4
 conflicts       libgda3
 set gname       libgda
-version		4.1.10
+version		4.1.11
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	GDA provides uniform access to diffent kinds of data sources.
 long_description	\
@@ -21,9 +21,9 @@ distname	libgda-${version}
 master_sites    gnome:sources/${gname}/${branch}/
 use_bzip2	yes
 
-checksums       md5     a809140426fad06c92202ecc8741ae32 \
-                sha1    78f7018734905ba1aa83b4b8add9184eed369fa0 \
-                rmd160  979abd512ff437eded06d770568ca7d36d7c4e5d
+checksums       md5     f7c31fbdbd7b312873bf5eb6778a8be3 \
+                sha1    41419c15eb646561f37c946cfe545c5dc36e4702 \
+                rmd160  da116defecfb60fdd8572fb243823614757f1206
 
 patchfiles      patch-configure.ac.diff
 
@@ -61,9 +61,9 @@ use_autoreconf    yes
 configure.perl  ${prefix}/bin/perl
 configure.env-append  INTLTOOL_PERL=${configure.perl}
 
-configure.args  --mandir=${prefix}/share/man \
-                --with-bdb=${prefix} \
+configure.args  --with-bdb=${prefix} \
                 --enable-system-sqlite \
+                --disable-silent-rules \
                 --disable-introspection \
                 --without-odbc \
                 --without-mysql \
@@ -80,6 +80,8 @@ configure.args  --mandir=${prefix}/share/man \
                 --without-java \
                 --without-jni
 
+use_parallel_build no
+
 variant with_mysql5 \
     description {support for current MySQL 5.x} {
 	depends_lib-append	path:bin/mysql_config5:mysql5
@@ -90,7 +92,7 @@ variant with_mysql5 \
 	configure.cppflags-append	"-I${prefix}/include/mysql5/mysql"
 }
 
-variant with_postgresql83 conflicts with_postgresql84 \
+variant with_postgresql83 conflicts with_postgresql84 with_postgresql90 \
     description {support for PostgreSQL 8.3.x} {
 	configure.cppflags-append	"-I${prefix}/include/postgresql83"
 	depends_lib-append	port:postgresql83
@@ -98,12 +100,20 @@ variant with_postgresql83 conflicts with_postgresql84 \
 	configure.args-append	--with-postgres=${prefix}/lib/postgresql83
 }
 
-variant with_postgresql84 conflicts with_postgresql83 \
+variant with_postgresql84 conflicts with_postgresql83 with_postgresql90 \
     description {support for PostgreSQL 8.4.x} {
 	configure.cppflags-append	"-I${prefix}/include/postgresql84"
 	depends_lib-append	port:postgresql84
 	configure.args-delete   --without-postgres
 	configure.args-append	--with-postgres=${prefix}/lib/postgresql84
+}
+
+variant with_postgresql90 conflicts with_postgresql83 with_postgresql84 \
+    description {support for PostgreSQL 9.0.x} {
+	configure.cppflags-append	"-I${prefix}/include/postgresql90"
+	depends_lib-append	port:postgresql90
+	configure.args-delete   --without-postgres
+	configure.args-append	--with-postgres=${prefix}/lib/postgresql90
 }
 
 variant without_bdb \
