gnome: update top-level meta port to version 2.30.2, add notes.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71818 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/alacarte/Portfile
+++ b/dports/gnome/alacarte/Portfile
@@ -39,7 +39,7 @@ configure.python ${prefix}/bin/python2.6
 # gnome-menus is not universal
 #
 
-universal_variant no
+# universal_variant no
 
 post-destroot {
     file rename ${destroot}${prefix}/bin/alacarte.py ${destroot}${prefix}/bin/alacarte
