--- a/dports/gnome/gnome-desktop/Portfile
+++ b/dports/gnome/gnome-desktop/Portfile
@@ -50,7 +50,7 @@ configure.python  ${prefix}/bin/python2.6
 # py26-gtk -> py26-cairo -> py26-numpy -> atlas is not universal
 #
 
-universal_variant no
+# universal_variant no
 
 post-activate {
     system "${prefix}/bin/scrollkeeper-update"
