--- a/dports/gnome/gnome/Portfile
+++ b/dports/gnome/gnome/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            gnome
-version         2.26.3
+version         2.30.2
 categories      gnome
 platforms       darwin
 maintainers     devans openmaintainer
@@ -37,11 +37,16 @@ post-activate {
     system "${prefix}/bin/update-mime-database ${prefix}/share/mime; true"
     system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
         gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
-    ui_msg "To start gnome, create a file called ~/.xinitrc.d/99-gnome.sh which contains this line:"
-    ui_msg "USERWM=${prefix}/bin/gnome-session"
-    ui_msg "See also http://trac.macports.org/wiki/GNOME for instructions and examples"
-    ui_msg "Make sure you do not have a custom ~/.xinitrc file, or you can run into problems."
 }
+
+notes "
+To start gnome, create a file called ~/.xinitrc.d/99-gnome.sh which contains this line:
+
+    USERWM=${prefix}/bin/gnome-session
+
+See also http://trac.macports.org/wiki/GNOME for instructions and examples
+Make sure you do not have a custom ~/.xinitrc file, or you can run into problems.
+"
 
 variant office description {Include GNOME office applications} {
     depends_lib-append port:gnumeric \
