--- a/dports/gnome/gnome-menus/Portfile
+++ b/dports/gnome/gnome-menus/Portfile
@@ -51,7 +51,7 @@ configure.args  --enable-introspection=no \
 # py26-gtk -> py26-cairo -> py26-numpy -> atlas is not universal
 #
 
-universal_variant no
+# universal_variant no
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
