various GNOME ports: not universal, update comments.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71819 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-desktop/Portfile
+++ b/dports/gnome/gnome-desktop/Portfile
@@ -47,10 +47,10 @@ configure.args  --with-gnome-distributor=MacPorts \
 configure.python  ${prefix}/bin/python2.6
 
 #
-# py26-gtk -> py26-cairo -> py26-numpy -> atlas is not universal
+# py26-gtk -> py26-cairo -> py26-numpy is not universal
 #
 
-# universal_variant no
+universal_variant no
 
 post-activate {
     system "${prefix}/bin/scrollkeeper-update"
