--- a/dports/gnome/gnome-panel/Portfile
+++ b/dports/gnome/gnome-panel/Portfile
@@ -52,7 +52,7 @@ configure.args  --x-includes=${prefix}/include \
 # gnome_menus is not universal
 #
 
-# universal_variant no
+universal_variant no
 
 post-activate {
     system " \
