py2[5-6]-coverage: update to 3.4
git-svn-id: https://svn.macports.org/repository/macports/trunk@71820 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-coverage/Portfile
+++ b/dports/python/py25-coverage/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 PortGroup           python25 1.0
 
 name                py25-coverage
-version             3.3.1
+version             3.4
 categories-append   devel
 platforms           darwin
 maintainers         nomaintainer
@@ -24,9 +24,8 @@ distname            coverage-${version}
 
 depends_lib-append  port:py25-distribute
 
-checksums           md5     6f5a25ce06baad03ab293990f3a98bb7 \
-                    sha1    56b30e982c618c34c1ba7d97a19ae48716b1c51d \
-                    rmd160  25b43c2e9286576a41c8cd0d86fa0b0bf4d0c26d
+checksums           md5     46782809578c8fd29912c124d2420842 \
+                    sha1    fd244e9890ae8b235315123a82c25e0db1788c26
 
 post-patch {
     # Permissions in the archive are 700
