--- a/dports/python/py26-coverage/Portfile
+++ b/dports/python/py26-coverage/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 PortGroup           python26 1.0
 
 name                py26-coverage
-version             3.3.1
+version             3.4
 categories-append   devel
 maintainers         nodamage.com:nodamage snc openmaintainer
 description         Code coverage measurement for Python
@@ -23,9 +23,8 @@ distname            coverage-${version}
 
 depends_lib         port:py26-distribute
 
-checksums           md5     6f5a25ce06baad03ab293990f3a98bb7 \
-                    sha1    56b30e982c618c34c1ba7d97a19ae48716b1c51d \
-                    rmd160  25b43c2e9286576a41c8cd0d86fa0b0bf4d0c26d
+checksums           md5     46782809578c8fd29912c124d2420842 \
+                    sha1    fd244e9890ae8b235315123a82c25e0db1788c26
 
 post-patch {
     # Permissions in the archive are 700
