testdisk: update to 6.11.3
git-svn-id: https://svn.macports.org/repository/macports/trunk@71821 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/testdisk/Portfile
+++ b/dports/sysutils/testdisk/Portfile
@@ -4,8 +4,7 @@
 PortSystem 1.0
 
 name            testdisk
-version         6.11
-revision        5
+version         6.11.3
 categories      sysutils
 platforms       darwin
 maintainers     snc openmaintainer
@@ -34,9 +33,8 @@ use_bzip2       yes
 
 homepage        http://www.cgsecurity.org/wiki/TestDisk
 master_sites    http://www.cgsecurity.org/
-checksums       md5 11f8fe95dcd190b69b782efa65b29ba1 \
-                sha1 6d25ceaed5a7f5e35466b0ad75a4bca104f66532 \
-                rmd160 0021601688ec779debd0a225305845b42605aaf9
+checksums           md5     ceee384a8613d8f7ffff5ccfa3fba510 \
+                    sha1    7ffb0528a9dbc4ecad662a998dd7cfa56df124a2
 
 configure.cppflags-append   -I${prefix}/include/ossp
 
