tiki: update to 3.7
git-svn-id: https://svn.macports.org/repository/macports/trunk@71824 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/tiki/Portfile
+++ b/dports/www/tiki/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                tiki
-version             3.6
+version             3.7
 categories          www
 maintainers         snc openmaintainer
 description         php based wiki with lots of extra features
@@ -23,9 +23,8 @@ master_sites        sourceforge:tikiwiki
 distname            tikiwiki-${version}
 use_bzip2           yes
 
-checksums           md5     ad0a36bbd8383ac199a06889fd0fff70 \
-                    sha1    41cd66e10ca173259b3f2dcd1ba83222b0c7ad25 \
-                    rmd160  8f72d1f2290c6c895a59b661d24f2895e449094d
+checksums           md5     f61b47fe64f2529c9ebd12669ed0e705 \
+                    sha1    646c5c66dc225a678f0b47c4f76a603cc1d23467
 
 use_configure       no
 
