--- a/dports/lang/apple-gcc42/Portfile
+++ b/dports/lang/apple-gcc42/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name			apple-gcc42
-version			5531
+version			5664
 categories		lang
 platforms		darwin
 maintainers		nomaintainer
@@ -11,10 +11,12 @@ description		Apple's version of gcc 4.2
 long_description	Apple's version of the GNU compiler collection, \
 			version 4.2. Supports C and Objective-C.
 
-homepage		http://developer.apple.com/documentation/DeveloperTools/gcc-4.2/gcc/
-master_sites		http://www.opensource.apple.com/darwinsource/tarballs/other/
-distname		gcc_42-${version}
-checksums		sha1 b8635f310393c17e6494fef0358ee944e03aa5c1
+homepage		http://opensource.apple.com/
+master_sites		http://opensource.apple.com/tarballs/gcc/
+distname		gcc-${version}
+checksums		md5     cc7f9e2fbae5548a2abec19ba6fd1b78 \
+			sha1    e1aed094e2a68dc2a877e4c32caddaa1511175ed \
+			rmd160  c22787601b7dc08fe85d5c3328ad3ea2efa727e1
 
 post-extract { file mkdir ${workpath}/build }
 
@@ -24,6 +26,8 @@ set nprefix ${prefix}/lib/${name}
 configure.dir		${workpath}/build
 configure.cmd		${worksrcpath}/configure
 configure.pre_args	--prefix=${nprefix}
+configure.ccache	no
+configure.distcc	no
 # C++ support breaks the build
 configure.args		--enable-languages=c,objc \
 			--program-suffix=-apple-4.2
@@ -46,5 +50,6 @@ post-destroot {
 	system "cd ${destroot}${prefix}/bin && ln -sf ${nprefix}/bin/gcc-apple-4.2 && ln -sf ${nprefix}/bin/cpp-apple-4.2"
 }
 
-livecheck.type		moddate
-livecheck.url		${master_sites}
+livecheck.type		regex
+livecheck.url		[lindex ${master_sites} 0]
+livecheck.regex		gcc-(\\d+(?:\\.\\d+)*)\\.tar
