bullet: follow stealth update of 2.77; see #26609
git-svn-id: https://svn.macports.org/repository/macports/trunk@71834 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/bullet/Portfile
+++ b/dports/devel/bullet/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 PortGroup           cmake 1.0
 
 name                bullet
-version             2.77
+version             2.77-2218
 categories          devel
 
 maintainers         stromnov openmaintainer
@@ -19,10 +19,12 @@ platforms           darwin
 homepage            http://bulletphysics.org/
 master_sites        googlecode:bullet
 extract.suffix      .tgz
+distname            ${name}-[lindex [split ${version} -] 0]
+dist_subdir         ${name}/${version}
 
-checksums           md5     a28385260d76a6be5e321294353462bb \
-                    sha1    d0dd2e8d991137781ed63b6e9bc123a9cf90457f \
-                    rmd160  42a52d6a343c78d9d3c126a4811d31f0a869d1d2
+checksums           md5     2f5074a1a29b618c672f1da4748e374b \
+                    sha1    ff37c79efd8afd01b14c03154ad1c217e6ad3c09 \
+                    rmd160  6fe822bf3150d33f0932fcb880d2d5a836d2cd88
 
 configure.args-append \
                     -DCMAKE_INSTALL_PREFIX=${prefix} \
