libid3tag: support non-default-build_arch; see #26611
git-svn-id: https://svn.macports.org/repository/macports/trunk@71835 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/libid3tag/Portfile
+++ b/dports/audio/libid3tag/Portfile
@@ -5,7 +5,7 @@ PortSystem 1.0
 
 name		libid3tag
 version		0.15.1b
-revision	1
+revision	2
 categories	audio
 maintainers	nomaintainer
 description	id3 tag manipulation library
@@ -25,9 +25,12 @@ post-patch {
 }
 
 post-configure {
-	if {[variant_isset universal]} {
-		reinplace "s|CC -dynamiclib|CC -dynamiclib ${configure.universal_ldflags}|g" ${worksrcpath}/libtool
-	}
+    if {[variant_isset universal]} {
+        set archflags ${configure.universal_ldflags}
+    } else {
+        set archflags ${configure.ld_archflags}
+    }
+    reinplace "s|CC -dynamiclib|CC -dynamiclib ${archflags}|g" ${worksrcpath}/libtool
 }
 
 post-destroot {
