libid3tag: add rmd160 checksum
git-svn-id: https://svn.macports.org/repository/macports/trunk@71836 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/libid3tag/Portfile
+++ b/dports/audio/libid3tag/Portfile
@@ -15,7 +15,8 @@ long_description	libid3tag is a library for reading and \
 platforms	darwin freebsd
 homepage	http://www.underbit.com/products/mad/
 master_sites	ftp://ftp.mars.org/pub/mpeg/ sourceforge:mad
-checksums	sha1 4d867e8a8436e73cd7762fe0e85958e35f1e4306
+checksums	sha1    4d867e8a8436e73cd7762fe0e85958e35f1e4306 \
+		rmd160  31a69b8ad7684aefdb675acc8ebf89bd6f432095
 depends_lib	port:zlib
 
 patchfiles	patch-id3tag.diff
