p5-net-twitter: update to 3.13009.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71841 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-net-twitter/Portfile
+++ b/dports/perl/p5-net-twitter/Portfile
@@ -4,19 +4,20 @@ PortSystem          1.0
 PortGroup           perl5 1.0
 categories          perl net
 platforms           darwin
-perl5.setup         Net-Twitter 3.13008
+perl5.setup         Net-Twitter 3.13009
 maintainers         vinc17 openmaintainer
 description         A Perl interface to the Twitter API
 long_description    ${description}.
 
-checksums           md5     79cf14c440da08004656beb3667c3396 \
-                    sha1    4d0eea2dc3df5abb224b76e02d377e3a55402bbe \
-                    rmd160  b7f04f6406ec1c8efa6960a8f8031c24f28256a6
+checksums           md5     db7f341347f389fb46f9cc6e4362deba \
+                    sha1    6c3406dbb7f9d9c62b50613baaf8d679c7acef53 \
+                    rmd160  0cf742fc9d083d97262eb92c34d0e07a4905942f
 
 depends_lib-append \
   port:p5-data-visitor \
   port:p5-datetime \
   port:p5-datetime-format-strptime \
+  port:p5-devel-stacktrace \
   port:p5-encode \
   port:p5-html-parser \
   port:p5-libwww-perl \
