bullet: fix OpenCL headers for case-sensitive filesystems
git-svn-id: https://svn.macports.org/repository/macports/trunk@71845 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/bullet/Portfile
+++ b/dports/devel/bullet/Portfile
@@ -26,6 +26,8 @@ checksums           md5     2f5074a1a29b618c672f1da4748e374b \
                     sha1    ff37c79efd8afd01b14c03154ad1c217e6ad3c09 \
                     rmd160  6fe822bf3150d33f0932fcb880d2d5a836d2cd88
 
+patchfiles          patch-btSoftBodySolverBuffer_OpenCL.h.diff
+
 configure.args-append \
                     -DCMAKE_INSTALL_PREFIX=${prefix} \
                     -DCMAKE_INSTALL_NAME_DIR=${prefix}/lib \
