rb-cvs: update master_sites
git-svn-id: https://svn.macports.org/repository/macports/trunk@71849 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/ruby/rb-cvs/Portfile
+++ b/dports/ruby/rb-cvs/Portfile
@@ -8,7 +8,7 @@ maintainers		otierney.net:dports
 description		High level interface to a CVS repository
 long_description	Ruby/CVS provides high level interface to a CVS repository. 
 homepage            http://cvs.m17n.org/~akr/ruby-cvs/
-master_sites        http://opendarwin.org/~tristan/files/
+master_sites        fink
 categories-append   devel
 depends_lib-append  port:cvs
 worksrcdir          ${ruby.filename}
