--- a/dports/perl/p5-html-tree/Portfile
+++ b/dports/perl/p5-html-tree/Portfile
@@ -3,17 +3,21 @@
 PortSystem		1.0
 PortGroup		perl5 1.0
 
-perl5.setup		HTML-Tree 3.23
+perl5.setup		HTML-Tree 4.0
 epoch			1
 
-maintainers		geeklair.net:dluke
+maintainers		geeklair.net:dluke openmaintainer
 description		Perl parser that can build HTML syntax trees.
 long_description	$description
 
-checksums		md5 6352f50be402301f79b580dd235d7762
+checksums	md5	7ba44995905a117c00f6744350799883 \
+		sha1	78689f1fd026f03432e886c6b4b49f7d4d89aa8b \
+		rmd160	ad245baea05b58b63adf7ba6addef32a90057fda
+
 platforms		darwin
 
 depends_lib-append	port:p5-html-parser \
-			port:p5-html-tagset
+			port:p5-html-tagset \
+			port:p5-test-exception
 
 supported_archs noarch
