--- a/dports/gnome/dasher/Portfile
+++ b/dports/gnome/dasher/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name            dasher
 version         4.11
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     Zooming text entry system.
 long_description \
@@ -25,7 +26,8 @@ checksums       md5     55695cacecb9fa9e3259e0f2ef82ae9e \
                 sha1    9acbbdbd7ad5d86bc310965c97e84b855d9be157 \
                 rmd160  e820fb276d7aa50fb7ee4010e2e763e21767e074
 
-depends_lib     port:gconf
+depends_lib     port:gconf \
+                port:at-spi
 
 patchfiles      patch-configure.diff
 
