json-glib: update to version 0.10.4, enable GObject introspection, update master_sites, livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71855 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/json-glib/Portfile
+++ b/dports/devel/json-glib/Portfile
@@ -4,7 +4,8 @@
 PortSystem          1.0
 
 name                json-glib
-version             0.8.0
+version             0.10.4
+set branch          [join [lrange [split ${version} .] 0 1] .]
 categories          devel
 maintainers         otherware.org:nefar openmaintainer
 homepage            http://live.gnome.org/JsonGlib
@@ -15,14 +16,17 @@ long_description    JSON-GLib is a library providing serialization and \
 
 platforms           darwin
 depends_build       port:pkgconfig port:gtk-doc
-depends_lib         path:lib/pkgconfig/glib-2.0.pc:glib2
+depends_lib         path:lib/pkgconfig/glib-2.0.pc:glib2 \
+                    port:gobject-introspection
 
-master_sites        http://download.gnome.org/sources/json-glib/0.8/
+master_sites        gnome:sources/${name}/${branch}/
 
-checksums           md5     220dafb2fd804e74d1f5057ba72ae0b6 \
-                    sha1    c185df080ed41254f67b27193e7e4ab1fe90b7b7 \
-                    rmd160  0f2e5ecd903006fb432d76694575f776fd50eeec
+checksums           md5     87677e939a4b3d42e1c56b2a3046b9bb \
+                    sha1    d41283270e8a104877c30a30ea5abb3dbea1647f \
+                    rmd160  515b9b81b6877a21c74be4cd14e82382965be267
+
+configure.args      --enable-introspection=yes
 
 livecheck.type      regex
-livecheck.url       http://folks.o-hand.com/~ebassi/sources/
-livecheck.regex     ${name}-(\[0-9.\]+)\\.tar\\.gz
+livecheck.url       http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
+livecheck.regex     {LATEST-IS-(\d+(?:\.\d+)*)}
