clutter: update to version 1.4.0, dependencies.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71856 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/clutter/Portfile
+++ b/dports/graphics/clutter/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                clutter
-version             1.2.12
+version             1.4.0
 set branch          [string range $version 0 [expr [string last "." $version] - 1]]
 categories          graphics
 maintainers         devans openmaintainer
@@ -17,18 +17,15 @@ homepage            http://www.clutter-project.org/
 master_sites        http://www.clutter-project.org/sources/${name}/${branch}/
 use_bzip2           yes
 
-checksums           md5     76f70e765adcf7146be1ceb50bafa14f \
-                    sha1    70feff8c3c2bbf2d4ed7ed6ecae6ad04a464d499 \
-                    rmd160  6fc93feda3dcdd5f17ff7c40661211b078210b34
+checksums           md5     329b6ac4e14b6f63b23297cfbb05af93 \
+                    sha1    541be0561b3875e6afd3ca81c10da01dc15fedae \
+                    rmd160  d8b1b285e2b9ae10e977cdbafdc0cdc230dd7395
 
 depends_build       port:pkgconfig
 
 depends_lib         port:gtk2 \
                     port:mesa \
-                    port:xorg-libXdamage \
-                    port:xorg-libXcomposite
-
-patchfiles          patch-clutter-glx-clutter-stage-glx.c.diff
+                    port:json-glib
 
 configure.args      --with-flavour=glx \
                     --with-imagebackend=gdk-pixbuf \
@@ -38,9 +35,7 @@ configure.args      --with-flavour=glx \
                     --disable-gtk-doc
 
 variant no_x11 {
-    depends_lib-delete   port:mesa \
-                         port:xorg-libXdamage \
-                         port:xorg-libXcomposite
+    depends_lib-delete   port:mesa
     configure.args-delete --with-flavour=glx \
                          --with-imagebackend=gdk-pixbuf \
                          --x-includes=${prefix}/include \
