various GNOME related ports: update comments concerning universal variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@71857 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/comms/farsight2/Portfile
+++ b/dports/comms/farsight2/Portfile
@@ -42,7 +42,7 @@ configure.args  --disable-gupnp \
                 --disable-valgrind
 
 #
-# py26-gst-python -> py26-cairo -> py26-numpy -> atlas is not universal
+# py26-gst-python -> py26-cairo -> py26-numpy is not universal
 #
 
 if {[variant_isset python]} {
