--- a/dports/gnome/gedit/Portfile
+++ b/dports/gnome/gedit/Portfile
@@ -44,7 +44,7 @@ set python_framework ${frameworks_dir}/Python.framework/Versions/2.6
 configure.pkg_config_path ${python_framework}/lib/pkgconfig
 
 #
-# py26-pygtksourceview -> py26-gtk -> py26-cairo -> py26-numpy -> atlas is not universal
+# py26-pygtksourceview -> py26-gtk -> py26-cairo -> py26-numpy is not universal
 #
 
 universal_variant no
