--- a/dports/gnome/vte/Portfile
+++ b/dports/gnome/vte/Portfile
@@ -41,7 +41,7 @@ configure.env               PATH=${python_prefix}/bin:$env(PATH)
 
 configure.cflags-append -fstrict-aliasing
 
-# py26-gtk -> py26-cairo -> py26-numpy -> atlas is not universal
+# py26-gtk -> py26-cairo -> py26-numpy is not universal
 
 universal_variant no
 
