--- a/dports/net/libgweather/Portfile
+++ b/dports/net/libgweather/Portfile
@@ -51,7 +51,8 @@ configure.pkg_config_path ${python_framework}/lib/pkgconfig
 build.env       PATH=${python_framework}/bin:$env(PATH)
 
 #
-# py26-gtk -> py26-cairo -> py26-numpy -> atlas is not universal
+# py26-gtk -> py26-cairo -> py26-numpy is not universal
+#
 
 universal_variant no
 
