jack: add missing dependency without maintainer's approval since the port fails to build otherwise.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71859 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/jack/Portfile
+++ b/dports/audio/jack/Portfile
@@ -31,7 +31,8 @@ configure.args  --enable-posix-shm \
 depends_lib     port:libxml2 \
                 port:libxslt \
                 port:zlib \
-                port:libsndfile
+                port:libsndfile \
+                port:libsamplerate
 
 livecheck.type  regex
 livecheck.url   ${homepage}
