jack: reverting addition of dependency on libsamplerate which is optional only, my apologies to the maintainer.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71861 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/jack/Portfile
+++ b/dports/audio/jack/Portfile
@@ -31,8 +31,7 @@ configure.args  --enable-posix-shm \
 depends_lib     port:libxml2 \
                 port:libxslt \
                 port:zlib \
-                port:libsndfile \
-                port:libsamplerate
+                port:libsndfile
 
 livecheck.type  regex
 livecheck.url   ${homepage}
