bullet: fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@71862 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/bullet/Portfile
+++ b/dports/devel/bullet/Portfile
@@ -6,6 +6,7 @@ PortGroup           cmake 1.0
 
 name                bullet
 version             2.77-2218
+set base_version    [lindex [split ${version} -] 0]
 categories          devel
 
 maintainers         stromnov openmaintainer
@@ -19,7 +20,7 @@ platforms           darwin
 homepage            http://bulletphysics.org/
 master_sites        googlecode:bullet
 extract.suffix      .tgz
-distname            ${name}-[lindex [split ${version} -] 0]
+distname            ${name}-${base_version}
 dist_subdir         ${name}/${version}
 
 checksums           md5     2f5074a1a29b618c672f1da4748e374b \
@@ -34,3 +35,5 @@ configure.args-append \
                     -DBUILD_DEMOS=OFF \
                     -DINSTALL_LIBS=ON \
                     -DINSTALL_EXTRA_LIBS=ON
+
+livecheck.version   ${base_version}
