hdfeos5: updated for 1.13. fixes #26616
git-svn-id: https://svn.macports.org/repository/macports/trunk@71865 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/hdfeos5/Portfile
+++ b/dports/science/hdfeos5/Portfile
@@ -4,8 +4,7 @@
 PortSystem          1.0
 
 name                hdfeos5
-version             1.12
-revision            1
+version             1.13
 categories          science
 platforms           darwin
 maintainers         takeshi
@@ -15,12 +14,14 @@ long_description \
     functionality in HDF-EOS 2 and to the extent possible it will be    \
     built with the same calling sequences as the original HDF-EOS 2 library.
 homepage            http://hdfeos.org/
-master_sites        ftp://edhs1.gsfc.nasa.gov/edhs/${name}/latest_release/
+master_sites        ftp://edhs1.gsfc.nasa.gov/edhs/${name}/latest_release/ \
+                    ftp://edhs1.gsfc.nasa.gov/edhs/${name}/previous_releases/
+
 distname            HDF-EOS5.${version}
 
-checksums           md5     c2c51a7ab67215d3861000452bcb8550 \
-                    sha1    c20d54a34a08586cc0c3ac06773ea557f78ddc66 \
-                    rmd160  be71e5ab494319c75cffd0ff39e10b78e2843c2d
+checksums           md5     9dd44039f3b3e6d232717f0b3554d103 \
+                    sha1    a3fbf5ce8ace164a3912cedba02d3b0b09e75151 \
+                    rmd160  461b0b97f8562dc48985bb541955a2f65827000f
 
 depends_lib         port:hdf5-18
 worksrcdir          ${name}
