lang/ruby19: add --with-opt-dir for #26337 and #26475, force macports' libraries
git-svn-id: https://svn.macports.org/repository/macports/trunk@71867 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/ruby19/Portfile
+++ b/dports/lang/ruby19/Portfile
@@ -41,6 +41,7 @@ configure.args		--enable-shared \
 					--mandir="${prefix}/share/man" \
 					--enable-pthread \
 					--without-tk \
+					--with-opt-dir="${prefix}" \
 					--program-suffix=1.9 \
 					--with-rubylibprefix=${prefix}/lib/ruby1.9
 
