cdrtools: fix man page location (#26619), fix mtree violation (#23035)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71869 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/cdrtools/Portfile
+++ b/dports/sysutils/cdrtools/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name	    	cdrtools
 version		3.00
+revision	1
 categories  	sysutils
 platforms		darwin
 description     ISO 9660 filesystem and CD creation tools
@@ -44,7 +45,11 @@ build.cmd	smake
 
 use_parallel_build no
 
-destroot.args   DEFINSUSR=root DEFINSGRP=wheel INS_BASE=${prefix} MANDIR=share/man
+destroot.args   DEFINSUSR=root DEFINSGRP=wheel INS_BASE=${prefix}
+
+post-destroot {
+    move ${destroot}/etc/default ${destroot}${prefix}/etc/
+}
 
 livecheck.url	[lindex ${master_sites} 0]
 livecheck.regex	${name}-(\[0-9.\]+)\\.tar
