p5-xml-treebuilder: remove unnecessary dependencies; see #26615
git-svn-id: https://svn.macports.org/repository/macports/trunk@71870 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-xml-treebuilder/Portfile
+++ b/dports/perl/p5-xml-treebuilder/Portfile
@@ -5,6 +5,7 @@ PortSystem          1.0
 PortGroup           perl5 1.0
 
 perl5.setup         XML-TreeBuilder 3.09
+revision            1
 platforms           darwin
 maintainers         nomaintainer
 supported_archs     noarch
@@ -24,17 +25,7 @@ checksums           md5     49e04fb6ba12b1414cb490e7f0c712a9 \
 
 depends_lib-append  port:p5-html-tagset \
                     port:p5-html-tree \
-                    port:p5-test-exception \
-                    port:p5-sub-uplevel \
-                    port:p5-extutils-cbuilder \
-                    port:p5-extutils-parsexs \
-                    port:p5-html-parser \
-                    port:p5-xml-parser \
-                    port:p5-libwww-perl \
-                    port:p5-io-compress \
-                    port:p5-compress-raw-bzip2 \
-                    port:p5-compress-raw-zlib \
-                    port:p5-uri \
+                    port:p5-xml-parser
 
 patchfiles          XML-TreeBuilder-NoExpand.patch
 patch.pre_args      -p1
