apt: switch to working master_sites (#13425)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71871 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/apt/Portfile
+++ b/dports/sysutils/apt/Portfile
@@ -15,7 +15,7 @@ long_description	Apt is Debian's next generation front-end for the \
 			way to install and upgrade packages.
 homepage		http://www.debian.org/
 
-master_sites		http://ftp.debian.org/debian/pool/main/a/apt/
+master_sites		fink
 checksums		md5 36f0b6012806569d27be98c80a6d57ff
 distname		${name}_${version}
 worksrcdir		${name}-${version}
