dsocks: fix build failure on 10.5+ (#13474)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71872 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/dsocks/Portfile
+++ b/dports/net/dsocks/Portfile
@@ -30,7 +30,7 @@ post-patch  {
 
 use_configure           no
 build.type              bsd
-destroot.post_args      DESTDIR=${destroot} LIBDIR=${prefix}/lib
+destroot.post_args      DESTDIR=${destroot} LIBDIR=${prefix}/lib STRIP=''
 
 post-destroot {
     xinstall -m 755 -d ${destroot}${prefix}/bin
