math/petsc: version bump to 3.1-p4
git-svn-id: https://svn.macports.org/repository/macports/trunk@71873 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/petsc/Portfile
+++ b/dports/math/petsc/Portfile
@@ -3,7 +3,7 @@
 PortSystem	1.0
 
 name		petsc
-version	    3.0.0-p11
+version	    3.1-p4
 categories  math science
 maintainers	mmoll
 description	Portable, Extensible Toolkit for Scientific Computation
@@ -12,14 +12,14 @@ long_description	PETSc, pronounced PET-see (the S is silent), is a suite \
         of scientific applications modeled by partial differential equations. \
         It employs the MPI standard for all message-passing communication.
 platforms	darwin
-homepage	http://www-unix.mcs.anl.gov/petsc/petsc-as/
+homepage	http://www.mcs.anl.gov/petsc/petsc-as/
 master_sites	ftp://ftp.mcs.anl.gov/pub/petsc/release-snapshots/
 distname	${name}-lite-${version}
 worksrcdir	${name}-${version}
 universal_variant   no
-checksums           md5     ebaa7638bb30bce694c440f2f63f7b8b \
-                    sha1    7fcba825134a8c65f53f4653bbf8b3bbac814d53 \
-                    rmd160  d1f1708540d697a78421b8df1097c8a92243e0e3
+checksums           md5     cc9979414f1ab67bb30c94e54c718615 \
+                    sha1    3331824fcf58eb6231cb70a75957fd42ab2df642 \
+                    rmd160  6e29d74b43051ae41de166d370b36d0a248896d4
 
 depends_lib-append  port:openmpi
 
@@ -27,18 +27,24 @@ configure.env-append	PETSC_DIR=${worksrcpath} PETSC_ARCH=darwin
 configure.cmd   ${worksrcpath}/config/configure.py
 configure.args  --with-python --with-debugging=0 \
  		--with-c-support=1 --with-c++-support=1 --with-pic=fPIC \
-		--prefix=${prefix}/lib/petsc \
+		--prefix=${destroot}${prefix}/lib/petsc \
 		--with-cc=${prefix}/bin/openmpicc \
 		--with-cxx=${prefix}/bin/openmpicxx \
 		--with-mpiexec=${prefix}/bin/openmpiexec
-build.env       PETSC_DIR=${worksrcpath} PETSC_ARCH=darwin
-destroot.destdir    INSTALL_DIR=${destroot}${prefix}/lib/petsc \
-        PETSC_DIR=${worksrcpath} PETSC_ARCH=darwin
+build.env-append    PETSC_DIR=${worksrcpath} PETSC_ARCH=darwin
 post-destroot {
-    reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${prefix}/lib/petsc/conf/base
-    reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${prefix}/lib/petsc/conf/rules
+    reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${prefix}/lib/petsc/conf/RDict.db
+    reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${prefix}/lib/petsc/conf/petscrules
     reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${prefix}/lib/petsc/conf/petscvariables
+    reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${prefix}/lib/petsc/conf/reconfigure-darwin.py
+    reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${prefix}/lib/petsc/conf/rules
+    reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${prefix}/lib/petsc/conf/test
     reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${prefix}/lib/petsc/conf/variables
+    reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${prefix}/lib/petsc/include/petscconf.h
+    reinplace "s|${worksrcpath}|${prefix}/petsc|g" ${destroot}${prefix}/lib/petsc/include/petscconf.h
+    reinplace "s|${worksrcpath}|${prefix}/petsc|g" ${destroot}${prefix}/lib/petsc/include/petscmachineinfo.h
+    reinplace "s|${worksrcpath}|${prefix}/petsc|g" ${destroot}${prefix}/lib/petsc/conf/petscvariables
+    reinplace "s|${worksrcpath}|${prefix}/petsc|g" ${destroot}${prefix}/lib/petsc/conf/RDict.db
 }
 
 # disabled for now; no mpi support in fftw port yet
