--- a/dports/math/slepc/Portfile
+++ b/dports/math/slepc/Portfile
@@ -3,7 +3,7 @@
 PortSystem      1.0
 
 name            slepc
-version         3.0.0-p7
+version         3.1-p4
 categories      math science
 maintainers     mmoll
 description     Scalable Library for Eigenvalue Problem Computations
@@ -18,24 +18,19 @@ master_sites    http://www.grycap.upv.es/slepc/download/distrib
 distname        ${name}-${version}
 universal_variant   no
 
-patchfiles      patch-config-configure.py.diff
-
-checksums           md5     9a5da74c6cc2e48116619d5add242d84 \
-                    sha1    1b90ca18c12258f1aeceace4fc7a179b6b5f5fb6 \
-                    rmd160  4287dcaa106f3bd2c7dddca7f188e8da255af9c7
+checksums           md5     96057d4ee9d1a17c7b1aa614d864f84a \
+                    sha1    a781a90c62465e88be322cdd3ff4b6bff7f3f877 \
+                    rmd160  7a0776a49431e1967afe06ee07563b8df463c064
 
 depends_lib-append  port:petsc
 
 extract.suffix  .tgz
-configure.env-append    PETSC_DIR=${prefix}/lib/petsc \
-                SLEPC_DIR=${worksrcpath}
-configure.cmd   ${worksrcpath}/config/configure.py
-configure.args  --prefix=${prefix}/lib/petsc
-build.env       PETSC_DIR=${prefix}/lib/petsc  \
-                SLEPC_DIR=${worksrcpath}
-destroot.env    PETSC_DIR=${prefix}/lib/petsc PETSC_ARCH=. \
-                SLEPC_DIR=${worksrcpath}
-destroot.destdir    SLEPC_INSTALL_DIR=${destroot}${prefix}/lib/petsc
+configure.env-append  PETSC_DIR=${prefix}/lib/petsc SLEPC_DIR=${worksrcpath}
+configure.cmd         ${worksrcpath}/config/configure.py
+configure.args        --prefix=${prefix}/lib/petsc
+build.env-append      PETSC_DIR=${prefix}/lib/petsc PETSC_ARCH=installed-petsc SLEPC_DIR=${worksrcpath}
+destroot.env-append   PETSC_DIR=${prefix}/lib/petsc PETSC_ARCH=installed-petsc SLEPC_DIR=${worksrcpath}
+destroot.cmd-append   SLEPC_INSTALL_DIR=${destroot}${prefix}
 
 variant arpack description {compile with ARPACK support} {
     pre-fetch {
@@ -45,16 +40,20 @@ variant arpack description {compile with ARPACK support} {
     }
     # This is a rather fragile way to figure out where the fortran library can be
     # found that is needed to link against libparpack.a:
-    if {[file exists ${prefix}/lib/gcc43]} {
-        set fortrandir ${prefix}/lib/gcc43
+    if {[file exists ${prefix}/lib/gcc44]} {
+        set fortrandir ${prefix}/lib/gcc44
     } else {
-        if {[file exists ${prefix}/lib/gcc42]} {
-            set fortrandir ${prefix}/lib/gcc42
+        if {[file exists ${prefix}/lib/gcc43]} {
+            set fortrandir ${prefix}/lib/gcc43
         } else {
-            if {[file exists ${prefix}/lib/g95]} {
-                set fortrandir ${prefix}/lib/gcc95
+            if {[file exists ${prefix}/lib/gcc42]} {
+                set fortrandir ${prefix}/lib/gcc42
             } else {
-                return -code error "Please install a fortran compiler by installing one of the following ports: gcc42, gcc43, or g95."
+                if {[file exists ${prefix}/lib/g95]} {
+                    set fortrandir ${prefix}/lib/gcc95
+                } else {
+                    return -code error "Please install a fortran compiler by installing one of the following ports: gcc42, gcc43, or g95."
+                }
             }
         }
     }
