couchdb: disable universal since dependency erlang is not universal
git-svn-id: https://svn.macports.org/repository/macports/trunk@71876 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/couchdb/Portfile
+++ b/dports/databases/couchdb/Portfile
@@ -34,6 +34,9 @@ depends_lib	port:automake \
     port:curl \
     port:erlang
 
+# erlang is not universal
+universal_variant   no
+
 set dbgroup couchdb
 set dbuser couchdb
 set logdir ${prefix}/var/log/couchdb
